--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap');
 
 
 html {
@@ -35,16 +35,17 @@ body {
 .calculator-display h1 {
   margin: 0;
   padding: 25px;
-  font-family: 'Orbitron', sans-serif;
+  font-weight: 100;
+  font-family: 'Montserrat', sans-serif;
   font-size: 45px;
   overflow-x: auto;
 }
 
 /* custom scrollbar */
-
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
+
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
@@ -56,3 +57,60 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+/* Buttons */
+.calculator-buttons {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 10px;
+}
+
+button {
+  min-height: 50px;
+  font-size: 20px;
+  font-weight: 100;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(203, 203, 203);
+}
+
+button:hover {
+  filter: brightness(80%);
+}
+button:focus{
+  outline: none;
+}
+
+button:active{
+  transform: translateY(1px);
+}
+
+.operator {
+  background: gray;
+  color: whitesmoke;
+  font-size: 30ppx;
+}
+
+.clear {
+  background: rgb(179, 25, 25);
+  color: whitesmoke;
+}
+.clear:hover{
+  filter: brightness(90%);
+}
+
+.equal-sign {
+  grid-column: -2;
+  grid-row: 2 / span 4;
+  background: rgb(0, 176, 0);
+
+}
+
+@media screen and (max-width: 600px) {
+  .calculator{
+    width: 95%;
+  }
+}
+   
